--- a/frontend/src/css/share-link-dialog.css
+++ b/frontend/src/css/share-link-dialog.css
@@ -50,12 +50,22 @@
 
 .share-dialog-content .share-dialog-main .tab-pane {
     height: 100%;
-    overflow: auto;
 }
 
 .share-list-container {
-    max-height: 18rem;
+    max-height: 20rem;
     min-height: 10rem;
+    overflow: auto;
+}
+
+#share-link-panel .share-list-container {
+    max-height: 23rem;
+    overflow: hidden;
+}
+
+#share-link-panel .table-real-container {
+    height: 22rem;
+    overflow: auto;
 }
 
 .share-dialog-content label {
