--- a/seahub/profile/templates/profile/set_profile_react.html
+++ b/seahub/profile/templates/profile/set_profile_react.html
@@ -74,6 +74,23 @@ window.app.pageOptions = {
   socialNextPage: "{{ social_next_page|escapejs }}",
   {% endif %}
 
+  enableADFS: {% if enable_adfs %} true {% else %} false {% endif %},
+  {% if enable_adfs %}
+  samlConnected: {% if saml_connected %} true {% else %} false {% endif %},
+  socialNextPage: "{{ social_next_page|escapejs }}",
+  {% endif %}
+
+  enableMultiADFS: {% if enable_multi_adfs %} true {% else %} false {% endif %},
+  {% if enable_multi_adfs %}
+  orgSamlConnected: {% if org_saml_connected %} true {% else %} false {% endif %},
+  socialNextPage: "{{ social_next_page|escapejs }}",
+  {% endif %}
+
+  orgID: "{{ org_id }}",
+
+  cloudMode: {% if cloud_mode %} true {% else %} false {% endif %},
+  isOrgContext: {% if org is not None %} true {% else %} false {% endif %},
+
   enableDeleteAccount: {% if ENABLE_DELETE_ACCOUNT %} true {% else %} false {% endif %}
 };
 </script>
