--- a/seahub/templates/wiki/wiki.html
+++ b/seahub/templates/wiki/wiki.html
@@ -48,6 +48,7 @@
             isPublicWiki: "{{ is_public_wiki }}",
             isDir: "{{ is_dir }}",
             hasIndex: {% if has_index %} true {% else %} false {% endif %},
+            assetsUrl: "{{ assets_url }}"
         }
     };
 </script>
